--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 		<script async src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 		<script async src="jscript/imagesloaded.pkgd.min.js"></script>
 		<script async src="jscript/masonry.pkgd.min.js"></script>
-        <script async src="//code.angularjs.org/1.3.0-rc.1/angular.min.js"></script>
-        <script async src="jscript/angular-masonry.min.js"></script>
-        <script async src="jscript/andybarefoot.js"></script>
+        <script src="//code.angularjs.org/1.3.0-rc.1/angular.min.js"></script>
+        <script src="jscript/angular-masonry.min.js"></script>
+        <script src="jscript/andybarefoot.js"></script>
 		<script>
 			document.createElement('header');
 			jQuery(document).ready(function( $ ) {
