css grid masonry update

--- a/index.html
+++ b/index.html
@@ -57,7 +57,22 @@
 			<div id="projectTitle" class="sectionTitle">
 				<h2>Personal Projects</h2>
 			</div>
-
+			<div class="project">
+				<div class="projectTitle"><h3>Post: Masonry/CSS Grid tutorial</h3></div>
+				<div class="projectDesc">
+					<a href="https://medium.com/@andybarefoot/a-masonry-style-layout-using-css-grid-8c663d355ebb" target="cssgridMasonryPost"><img src="images/cssgrid-masonry-post.png" /></a>
+					<p>I wrote a post on <a href="https://medium.com/@andybarefoot/a-masonry-style-layout-using-css-grid-8c663d355ebb" target="cssgridMasonryPost">Medium</a> detailing how CSS Grid can be used to create a compact layout of uneven sized items in a grid.</p>
+					<p>Using a little bit of JavaScript the sizing of the grid items can be automated and the method used as a replacement for Masonry in those browsers that support CSS Grid.</p>
+				</div>
+			</div>
+			<div class="project">
+				<div class="projectTitle"><h3>CSS Grid: Masonry layout with CSS Grid</h3></div>
+				<div class="projectDesc">
+					<a href="https://codepen.io/andybarefoot/pen/zdbVMm" target="cssgridMasonry"><img src="images/cssgrid-masonry.png" /></a>
+					<p>CSS Grid makes laying out content in a grid much easier and does a good job of Masonry style layouts as long as you are able to specify the size of each grid item in advance.</p>
+					<p>I wrote an example of how you can use a little bit of JavaScript to automatically resize the grid items to get a perfect <a href="https://codepen.io/andybarefoot/pen/zdbVMm" target="cssgridMasonry" target="cssgridMasonry">Masonry layout with CSS Grid</a>.</p>
+				</div>
+			</div>
 			<div class="project">
 				<div class="projectTitle"><h3>Data Vis: Game of Thrones Allegiances</h3></div>
 				<div class="projectDesc">
