enable secure fonts

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -9,9 +9,9 @@
 		<link rel="stylesheet" href="/css/mobile.css">
 		<link rel="stylesheet" href="/css/lightbox.css">
 		<meta charset="utf-8" />
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
+		<link href='//fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
 		<script src="/jscript/analyticstracking.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 		<script src="/jscript/lightbox.js"></script>
 		<script>
 			document.createElement('header');
