--- a/index.html
+++ b/index.html
@@ -58,11 +58,27 @@
 				<h2>Personal Projects</h2>
 			</div>
 			<div class="project">
-				<div class="projectTitle"><h3>Post: Masonry/CSS Grid tutorial</h3></div>
+				<div class="projectTitle"><h3>CSS Grid: Rodchenko poster layout</h3></div>
 				<div class="projectDesc">
-					<a href="https://medium.com/@andybarefoot/a-masonry-style-layout-using-css-grid-8c663d355ebb" target="cssgridMasonryPost"><img src="images/cssgrid-masonry-post.png" /></a>
-					<p>I wrote a post on <a href="https://medium.com/@andybarefoot/a-masonry-style-layout-using-css-grid-8c663d355ebb" target="cssgridMasonryPost">Medium</a> detailing how CSS Grid can be used to create a compact layout of uneven sized items in a grid.</p>
-					<p>Using a little bit of JavaScript the sizing of the grid items can be automated and the method used as a replacement for Masonry in those browsers that support CSS Grid.</p>
+					<a href="https://codepen.io/andybarefoot/full/GMvygq" target="booksPoster"><img src="images/books.png" /></a>
+					<p>A CSS Grid layout experiment on <a href="https://codepen.io/andybarefoot/full/GMvygq" target="booksPoster">CodePen</a> using CSS Grid and CSS transformations and perspective.</p>
+					<p>The layout is based on the famous 1924 poster by Alexander Rodchenko for the Gosizdat publishing house.</p>
+				</div>
+			</div>
+			<div class="project">
+				<div class="projectTitle"><h3>CSS Grid: Animated lizard tiles</h3></div>
+				<div class="projectDesc">
+					<a href="https://codepen.io/andybarefoot/full/MEbORa" target="animatedLizards"><img src="images/lizards.png" /></a>
+					<p>An experiment on <a href="https://codepen.io/andybarefoot/full/MEbORa" target="animatedLizards">CodePen</a> combining CSS Grid and SVG animation using D3.js.</p>
+					<p>The tessellated lizard tiles are based on a painting by M. C. Escher.</p>
+				</div>
+			</div>
+			<div class="project">
+				<div class="projectTitle"><h3>CSS Grid: Diamond Grid layout</h3></div>
+				<div class="projectDesc">
+					<a href="https://codepen.io/andybarefoot/full/QqGBro" target="cssgridDiamonds"><img src="images/diamonds.png" /></a>
+					<p>A CSS Grid layout on <a href="https://codepen.io/andybarefoot/full/QqGBro" target="cssgridDiamonds">CodePen</a> with a diagonal grid that fills exactly the browser window and orders the items appropriately.</p>
+					<p>The user can specify the total number of grid items and the number of items per row. JavaScript is used to resize the grid and place the items in the correct order.</p>
 				</div>
 			</div>
 			<div class="project">
