--- a/index-new.html
+++ b/index-new.html
@@ -24,37 +24,33 @@
 		</ul>
 		<ul class="collection" id="css">
 			<h2>Code</h2>
-			<span class="summary"><p>A collection of front-end code experiments on CodePen and mainly focusing on CSS Grid.</p></span>
+			<span class="summary"><span><p>A collection of front-end code experiments on CodePen and mainly focusing on CSS Grid.</p></span></span>
 			<li>
-				<h3>Rodchenko poster layout</h3>
+				<a href="https://codepen.io/andybarefoot/full/GMvygq" target="booksPoster"><h3>Rodchenko poster layout</h3></a>
 				<a href="https://codepen.io/andybarefoot/full/GMvygq" target="booksPoster"><img src="images/books.png" /></a>
 				<p>A CSS Grid layout experiment on <a href="https://codepen.io/andybarefoot/full/GMvygq" target="booksPoster">CodePen</a> using CSS Grid and CSS transformations and perspective.</p>
 				<p>The layout is based on the famous 1924 poster by Alexander Rodchenko for the Gosizdat publishing house.</p>
 			</li>
 			<li>
-				<h3>Animated lizard tiles</h3>
+				<a href="https://codepen.io/andybarefoot/full/MEbORa" target="animatedLizards"><h3>Animated lizard tiles</h3></a>
 				<a href="https://codepen.io/andybarefoot/full/MEbORa" target="animatedLizards"><img src="images/lizards.png" /></a>
 				<p>An experiment on <a href="https://codepen.io/andybarefoot/full/MEbORa" target="animatedLizards">CodePen</a> combining CSS Grid and SVG animation using D3.js.</p>
 				<p>The tessellated lizard tiles are based on a painting by M. C. Escher.</p>
 			</li>
 			<li>
-				<h3>Diamond Grid layout</h3>
+				<a href="https://codepen.io/andybarefoot/full/QqGBro" target="cssgridDiamonds"><h3>Diamond Grid layout</h3></a>
 				<a href="https://codepen.io/andybarefoot/full/QqGBro" target="cssgridDiamonds"><img src="images/diamonds.png" /></a>
 				<p>A CSS Grid layout on <a href="https://codepen.io/andybarefoot/full/QqGBro" target="cssgridDiamonds">CodePen</a> with a diagonal grid that fills exactly the browser window and orders the items appropriately.</p>
 				<p>The user can specify the total number of grid items and the number of items per row. JavaScript is used to resize the grid and place the items in the correct order.</p>
 			</li>
 			<li>
-				<h3>Masonry layout with CSS Grid</h3>
+				<a href="https://codepen.io/andybarefoot/pen/zdbVMm" target="cssgridMasonry"><h3>Masonry layout with CSS Grid</h3></a>
 				<a href="https://codepen.io/andybarefoot/pen/zdbVMm" target="cssgridMasonry"><img src="images/cssgrid-masonry.png" /></a>
 				<p>CSS Grid makes laying out content in a grid much easier and does a good job of Masonry style layouts as long as you are able to specify the size of each grid item in advance.</p>
 				<p>I wrote an example of how you can use a little bit of JavaScript to automatically resize the grid items to get a perfect <a href="https://codepen.io/andybarefoot/pen/zdbVMm" target="cssgridMasonry" target="cssgridMasonry">Masonry layout with CSS Grid</a>.</p>
 			</li>
 		</ul>
-<!-- 		<h2>Articles</h2>
-		<h2>DataVis</h2>
-		<h2>Mobile Apps</h2>
-		<h2>Web</h2>
- -->		<br>
+		<br>
 		<br>
 		<br>
 		<br>
