--- a/index-new.html
+++ b/index-new.html
@@ -23,7 +23,7 @@
 			<li><a href="mailto:andy@andybarefoot.com"><img src="images/icons/png64/email.png"></a></li>
 		</ul>
 		<ul class="collection" id="css">
-			<h2>Code</h2>
+			<h2>CSS</h2>
 			<span class="summary"><span><p>A collection of front-end code experiments on CodePen and mainly focusing on CSS Grid.</p></span></span>
 			<li>
 				<a href="https://codepen.io/andybarefoot/full/GMvygq" target="booksPoster"><h3>Rodchenko poster layout</h3></a>
@@ -49,13 +49,147 @@
 				<p>CSS Grid makes laying out content in a grid much easier and does a good job of Masonry style layouts as long as you are able to specify the size of each grid item in advance.</p>
 				<p>I wrote an example of how you can use a little bit of JavaScript to automatically resize the grid items to get a perfect <a href="https://codepen.io/andybarefoot/pen/zdbVMm" target="cssgridMasonry" target="cssgridMasonry">Masonry layout with CSS Grid</a>.</p>
 			</li>
+			<li><a href="/got/grid.html" target="gotgrid"><h3>CSS Grid: Grid of Thrones</h3></a>
+				<a href="/got/grid.html" target="gotgrid"><img src="images/got-grid.png" /></a>
+				<p>The dilligent and learned maesters at the excellent <a class="ext" href="http://gameofthrones.wikia.com/wiki/Game_of_Thrones_Wiki" target="got-wiki">Game of Thrones wiki</a> have documented everything you could ever need to know about Game of Thrones. This includes every character who has appeared in the show. From Daenerys Tagaryen to Othell Yarwyck to "Dwarf Hunter 2". If they speak a line or even if they are just an interesting corpse they will be on the site.</p>
+				<p>I used this data as the basis for an experiment using CSS Grid to create a grid whose elements expand to show more content when clicked.</p>
+				<p><a href="/got/grid.html" target="gotgrid">The grid</a> was built using D3.js to load in the data and populate the grid with content.</p>
+			</li>
 		</ul>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<a class="reset" href="javascript:domReset()">reset</a>
+		<ul class="collection" id="datavis">
+			<h2>Data Vis</h2>
+			<span class="summary"><span><p>Data Vis experiments mainly using D3.js.</p></span></span>
+			<li>
+				<a href="/got/allegiances.html" target="gotmap"><h3>Game of Thrones Allegiances</h3></a>
+				<a href="/got/allegiances.html" target="gotmap"><img src="images/got-map.png" /></a>
+				<p>To play the Game of Thrones you will need allies. But when those allies are Petyr Baelish, Roose Bolton or Alliser Thorne you will also need stab proof armour.</p>
+				<p>This <a href="/got/allegiances.html" target="gotmap">map</a> shows all the major houses and institutions of the Game of Thrones world with the many, many allegiances and connections to the hundreds of characters in the show.</p>
+				<p><a href="/got/allegiances.html" target="gotmap">The visualisation</a> was built using D3.js using data from the excellent <a class="ext" href="http://gameofthrones.wikia.com/wiki/Game_of_Thrones_Wiki" target="got-wiki">Game of Thrones wiki</a>.</p>
+			</li>
+			<li>
+				<a href="/art/" target="metcollection"><h3>The Met Collection</h3></a>
+				<a href="/art/" target="metcollection"><img src="images/met-collection.png" /></a>
+				<p><a class="ext" href="http://www.metmuseum.org/" target="met">The Metropolitan Museum of Art</a> recently published to GitHub the <a class="ext" href="https://github.com/metmuseum/openaccess" target="metgithub">details of 446,029 objects</a> from their collection.</p>
+				<p>This data visualisation attemts to show the distribution of the entire collection by date and to show the difference in age depending on the type of artifact. For example, the majority of vases in the collection are from around the year 300 A.D or before.</p>
+				<p><a href="/art/" target="metcollection">The visualisation</a> was made using D3.js after the raw data had been consolidated into JSON using PHP.</p>
+			</li>
+			<li><a href="/football/world-champions.html" target="footballmap"><h3>UFWC Map</h3></a>
+				<a href="/football/world-champions.html" target="footballmap"><img src="images/ufwc-map.png" /></a>
+				<p>Following on from my previous <a class="ext" href="/football/" target="football">UFWC data visualisation</a> I wanted to show the progress of the Unofficial World Football Championship using an <a href="/football/world-champions.html" target="footballmap">animated interactive map</a>.</p>
+				<p>The animation shows details of all 926 matches played so far as the map updates to show which teams have held or challenged for the title.</p>
+				<p>The visualisation was built using D3.js and JQuery and all the game data was sourced from the <a class="ext" href="http://www.ufwc.co.uk/results/" target="ufwc">UFWC website</a>.</p>
+			</li>
+			<li><a href="/football/path.html" target="premier"><h3>Premier League</h3></a>
+				<a href="/football/path.html" target="premier"><img src="images/premier.png" /></a>
+				<p>A <a href="/football/path.html" target="premier">data visualisation</a> to show the distance travelled by each Premier League footballer to get to their current club. It shows the distance from the player's birthplace and the clubs they have been at along the way both individually and totalled for each club. </p>
+				<p>See which clubs cast their nets the furthest and which rely on the largest number of journeymen.</p>
+				<p>The visualisation was built using D3.js and JQuery and all the data was scraped from Wikipedia.</p>
+			</li>
+			<li>
+				<a href="/football/" target="football"><h3>UFWC</h3></a>
+				<a href="/football/" target="football"><img src="images/football.png" /></a>
+				<p>The <a class="ext" href="http://www.ufwc.co.uk/" target="ufwc">Unofficial Football World Championships</a> is a project by Paul Brown that tracks the World Champions of football as if the title were decided in the same way as boxing, i.e a team remains champions until they lose a game.</p>
+				<p>My <a href="/football/" target="football">data visualisation</a> shows all of the 918 "title decider" games that have been played so far showing how thetitle has jumped from nation to nation and continent to continent.</p>
+				<p>The visualisation was built using D3.js and JQuery and all the data was sourced from the <a class="ext" href="http://www.ufwc.co.uk/results/" target="ufwc">UFWC website</a>.</p>
+			</li>
+			<li>
+				<a href="/olympics/" target="olympics"><h3>Olympics 2016</h3></a>
+				<a href="/olympics/" target="olympics"><img src="images/olympics.png" /></a>
+				<p>A selection of data visualisations from the <a href="/olympics/" target="olympics">2016 Summer Olympics</a>.</p>
+				<p>Data was either manually collected from wikipedia or scraped in real time from the BBC medal table and then stored in MySQL and formatted to CSV or JSON files.</p>
+				<p>The visualisations were built using D3.js and JQuery using some of Mike Bostock's excellent <a class="ext" href="https://bl.ocks.org/mbostock" target="d3">examples</a> as a starting point.</p>
+			</li>
+			<li>
+				<a href="/cocktails/" target="cocktails"><h3>Cocktail Menu</h3></a>
+				<a href="/cocktails/" target="cocktails"><img src="images/cocktails.png" /></a>
+				<p>An exercise in using D3.js and SVG to create <a href="/cocktails/" target="cocktails">data visualisations of cocktails</a> and their ingredients.</p>
+				<p>Inspired by this <a class="ext" href="http://www.informationisbeautiful.net/visualizations/cocktails/" target="_blank">original visualisation</a> by Tatjana Dubovina & David McCandless I wanted to make an entirely dynamically generated version.</p>
+				<p>The data was taken from <a class="ext" href="https://en.wikipedia.org/wiki/List_of_cocktails" target="_blank">Wikipedia</a> and is served in JSON from a MySQL database.</p>
+				<p>Each visualisation is generated programmatically from the data, including the drawing of the glass outline to create a <a href="/cocktails/" target="cocktails">menu of over 70 cocktails</a>.</p>
+			</li>
+			<li>
+				<a href="/got/" target="got"><h3>Valar Morghulis</h3></a>
+				<a href="/got/" target="got"><img src="images/got-deaths.png" /></a>
+				<p>Fans of Game of Thrones know that Valar Morghulis (all men must die) but when over 200 named characters have already gone to meet The Seven (or The Old Gods, or The Drowned God, or The Lord of Light, or The Many-Faced God of Death, or the Great Stallion, etc...) then it gets hard to keep track of the tragedy.</p>
+				<p>Fortunately Maester Barefoot has created a comprehensive record of all these deaths, whether violent, very violent or extremely violent.</p>
+				<p><a href="/got/" target="_whip">Valar Morghulis</a> shows every death and who was responsibly for the slaying. A kind of "butchery tree" if you like.</p>
+				<p>The data was scraped from the excellent <a class="ext" href="http://gameofthrones.wikia.com/wiki/Game_of_Thrones_Wiki" target="got-wiki">Game of Thrones wiki</a> and the data representation is implemented using Mike Bostock's marvellous <a class="ext" href="https://bl.ocks.org/mbostock" target="d3">D3 library</a>.</p>
+			</li>
+		</ul>
+		<ul class="collection" id="mobile">
+			<h2>Mobile</h2>
+			<span class="summary"><span><p>Mobile game development using the Unity platform.</p></span></span>
+			<li>
+				<a href="https://play.google.com/store/apps/details?id=com.GunterGames.SkiVR" target="skivr"><h3>Ski VR</h3></a>
+				<a href="https://play.google.com/store/apps/details?id=com.GunterGames.SkiVR" target="skivr"><img src="images/ski-vr.png" /></a>
+				<p>Ski VR is a quick VR demo built for Google Cardboard but also playable without a headset.</p>
+				<p>Slide gracefully down the mountain between trees and alpine chalets in a Virtual Reality winter wonderland.</p>
+				<p>Ski VR was built in <a class="ext" href="https://unity3d.com/" target="_unity">Unity</a> with the Google Cardboard SDK and uses 3rd party graphical assets.</p>
+				<p><a href="https://play.google.com/store/apps/details?id=com.GunterGames.SkiVR" target="skivr">Ski VR on Google Play.</a></p>
+			</li>
+			<li>
+				<a href="http://www.guntergames.com/colorhex" target="colorhex"><h3>Color Hex</h3></a>
+				<a href="http://www.guntergames.com/colorhex" target="colorhex"><img src="images/color-hex.jpg" /></a>
+				<p>Color Hex is a mobile puzzle game for Android and iOS built and published uing the Unity platform.</p>
+				<p>The player must try and match patterns by mixing colours together on a hexagonal grid. As the patterns get more complicated the puzzle becomes more difficult.</p>
+				<p>There are 2 play modes with a combined total of 222 levels.</p>
+				<p>Color Hex was built in <a class="ext" href="https://unity3d.com/" target="_unity">Unity</a> which supports exporting to both iOS and Android platforms.</p>
+				<p><a href="https://play.google.com/store/apps/details?id=com.guntergames.colourhexnew" target="colorhexplay">Color Hex on Google Play.</a><br />
+				<a href="https://itunes.apple.com/gb/app/id1093790722" target="colorhexitunes">Super Color Hex on iTunes.</a></p>
+			</li>
+			<li><a href="http://www.guntergames.com/superdice" target="sneakers"><h3>Super Dice</h3></a>
+				<a href="http://www.guntergames.com/superdice" target="sneakers"><img src="images/super-dice.jpg" /></a>
+				<p>My first attempt at using the <a class="ext" href="https://unity3d.com/" target="_unity">Unity</a> platform to create a mobile game was a mobile version of the dice game Farkle.</p>
+				<p><a href="http://www.guntergames.com/superdice" target="sneakers">Super Dice</a></p>
+			</li>
+		</ul>
+		<ul class="collection" id="web">
+			<h2>Web</h2>
+			<span class="summary"><span><p>Some web sites used for experimenting with various technologies.</p></span></span>
+			<li>
+				<a href="/politics/mpcompare/" target="mp-compare"><h3>MP CoMParison</h3></a>
+				<a href="/politics/mpcompare/" target="mp-compare"><img src="images/mp-compare.png" /></a>
+				<p>The site <a class="ext" href="http://www.publicwhip.org.uk/" target="_whip">the Public Whip</a> aggregates the data on how MPs in the UK parliament vote. They then group this by similar votes to provide an insight into how much each MP supports a particular policy.</p>
+				<p>However at the moment the site does not provide a tool to enable users to easily compare MPs and see their relative support for each issue.</p>
+				<p>I made a <a href="/politics/mpcompare/" target="mp-compare">small site</a> that scrapes the data from <a class="ext" href="http://www.publicwhip.org.uk/" target="_whip">the Public Whip</a> and allows the user to compare support for related policies across groups of MPs. The tool also allows the user to select any policy or MP and add them to the comparison.</p>
+				<p>The site was built using PHP to scrape the data and serve via API, and AngularJS to provide the interactive front-end functionality.</p>
+				<p><a href="/politics/mpcompare/" target="mp-compare">CoMParison - Compare MPs on their support for key policies.</a></p>
+			</li>
+			<li>
+				<a href="http://www.allthesneakers.com/" target="sneakers"><h3>All The Sneakers</h3></a>
+				<a href="http://www.allthesneakers.com/" target="sneakers"><img src="images/all-the-sneakers.jpg" /></a>
+				<p>In-progress search engine of sneakers collating and comparing sneakers from a number of eCommerce sites.</p>
+				<p>Regularly spiders a number of sites and compares prices where identical sneakers appear on multiple sites.</p>
+				<p>The spiders and APIs are built in PHP, the database in MySql and the front-end uses <a class="ext" href="http://sass-lang.com/" target="_sass">SASS</a> for the CSS. 
+				<p><a href="http://www.allthesneakers.com/" target="sneakers">All The Sneakers</a></p>
+			</li>
+			<li>
+				<a href="winstagram" target="winstagram" ><h3>Winstagram</h3></a>
+				<a href="winstagram" target="winstagram" ><img src="images/winstagram.jpg" /></a>
+				<p>More and more people are posting photos on their social web blogs. But most of them are not very good photographers. Or have poorly made cameras. The colours come out funny, the edges are all crackly and often some of the image is out of focus.</p>
+				<p>I have developed an app to restore these poor quality photographs: <a href="winstagram" target="winstagram" >Winstagram!</a></p>
+			</li>
+			<li>
+				<a href="/politics/cameron.php" target="cameron"><h3>We can't go on like this</h3></a>
+				<a href="/politics/cameron.php" target="cameron"><img src="images/cameron.jpg" /></a>
+				<p>Good old David Cameron. He's so suave yet so caring. he just wants the best for the country. He says so in his lovely new <a class="ext" href="http://www.flickr.com/photos/conservatives/4244583668/sizes/l/in/photostream/" target="flickr-tory">poster campaign</a> (NSFDuring lunch).</p>
+				<p>Deface David's poster with your own words with <a href="/politics/cameron.php" target="cameron">"Make your own David Cameron poster"</a>.</p>
+				<p>Go on, <a href="/politics/cameron.php" target="_blank">have a go</a>. You know you want to. Make it look like he is saying rude words. Hurr hurr hurr!</p>
+			</li>
+			<li>
+				<a href="/politics/tucker.php" target="tucker"><h3>Malcolm Tucker</h3></a>
+				<a href="/politics/tucker.php" target="tucker"><img src="images/malcolm-tucker.jpg" /></a>
+				<p>Combines the <a href="/politics/cameron.php" target="cameron">David Cameron poster generator</a> with the foul-mouthed tirades of Malcolm Tucker, <a class="ext" href="http://www.youtube.com/watch?v=LugJd6uGJqI" target="youtube-tucker">sweary spin doctor</a> from The Thick of It.</p>
+				<p>A random choice of blue bon-mot is substituted every time you click the "Tuckerise" button so <a href="/politics/tucker.php" target="tucker">click away</a>. However, be warned. He is a very very rude man and if you don't like naughty words you probably won't like this.</p>
+			</li>
+			<li>
+				<a href="http://inventedbytheenglish.wordpress.com" target="english"><h3>Invented by the English Blog</h3></a>
+				<a href="http://inventedbytheenglish.wordpress.com" target="english"><img src="images/invented.jpg" /></a>
+				<p>If it was invented, it was probably invented by an Englishman.</p>
+				<p>A retired blog detailing all the greatest inventions of the English.</p>
+			</li>
+		</ul>
+<!-- 		<a class="reset" href="javascript:domReset()">reset</a> -->
 	</body>
 	<script src="jscript/main-new.js"></script>
 </html>
