new tablet site

--- a/index-new.html
+++ b/index-new.html
@@ -2,6 +2,7 @@
 <html lang="en-uk">
     <head>
 		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+		<meta name="viewport" content="initial-scale=1.0, width=device-width" />		
 		<meta charset="utf-8" />
 		<title>Andy Barefoot</title>
 
