meta tag update

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 		<meta name="viewport" content="initial-scale=1.0, width=device-width" />		
 		<meta charset="utf-8" />
+		<meta name="description" content="Andy Barefoot personal site: Articles, code experiments and other non-work things.">
+		<meta name="keywords" content="Articles, Blog posts, Code Examples, CSS, HTML, Data Visualisations, Mobile Development, Unity">
+		<meta name="author" content="Andy Barefoot">
 		<title>Andy Barefoot</title>
 		<link href="https://fonts.googleapis.com/css?family=Bungee|Montserrat:400,700|Roboto:300,400" rel="stylesheet">
 		<link rel="stylesheet" href="css/reset.css">
